# otawa-x86

./: .gitignore  CMakeLists.txt  README.md  elf_3.eld  prog_Decoder.cpp  prog_DefaultLoader.cpp  x86.cpp  x86.eld  x86.h  x86_decoder.cpp  zygdis_decoder.cpp
cmake/: zydis-config.cmake
include/otawa/prog/: Decoder.h  DefaultLoader.h
samples/: sum.c  sum.elf
